# perfsonar-mcp

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  README.md  claude-config.example.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.devcontainer/: Dockerfile.dev  devcontainer.json
helm/perfsonar-mcp/: Chart.yaml  values.yaml
helm/perfsonar-mcp/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
src/: client.ts  index.ts  test.ts  types.ts
src/perfsonar_mcp/: __init__.py  __main__.py  client.py  fastmcp_server.py  lookup.py  pscheduler.py  server.py  types.py
tests/: test_basic.py  test_fastmcp.py
